--- a/Projeto Final/styles.css
+++ b/Projeto Final/styles.css
@@ -14,10 +14,10 @@ body {
     width: 352px;
     height: 198px;
     margin: 0 auto;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     outline: 1px solid #fff;
 
-    transform: scale(3) translateY(50%);
+    transform: scale(2.5) translateY(50%); /*Mudança de 3 para 2.5 para melhor enquadramento*/
 }
 
 .game-container canvas {
