--- a/Projeto Final/styles/global.css
+++ b/Projeto Final/styles/global.css
@@ -30,12 +30,13 @@ body {
 
 .game-container {
   position: relative; 
+   background: #d9f4ff;
   width: 352px;
   height: 198px;
   margin: 0 auto;
   outline: 1px solid #fff;
 
-  transform: scale(3) translateY(35%);
+  transform: scale(3) translateY(50%);
 }
 
 .game-container canvas {
